--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <div class="rose-color absolute opacity-0">
                 <img class="h-[100px]" src="Rose_Color.png">
             </div>
-            </div>
         </div>
         <div class="home-page w-full h-screen flex justify-center absolute top-0">
         <div class="background-image w-full h-screen absolute overflow-hidden">
@@ -35,8 +34,7 @@
 
         <div class="main-text text-2xl tracking-[32px] font-semibold lg:text-4xl z-2 cursor-pointer text-center !pl-32px">SAMJHANA</div>
         <div class="links">
-            <div class="overflow-hidden relative"><a  class="absolute" id="link1">ABOUT</a></div>
-            <div class="overflow-hidden relative"><a class="absolute" id="link1">GALLERY</a></div>
+            <div class="overflow-hidden relative"><a class="absolute" id="link1" href="gallery.html">GALLERY</a></div>
             <div class="overflow-hidden relative"><a class="absolute" id="link1">CONTACT</a></div>
         </div>
         </div>
